--- a/Source/MakeScore/TODO.txt
+++ b/Source/MakeScore/TODO.txt
@@ -1,18 +1,29 @@
 MAKE SCORE TODO LIST
 
-Ledger lines
+***Ledger lines 
+- don't use wide except for SBs
 
-B & T Clef, (clef change)
+***B & T Clef
+(- clef change: show mini-clef)
 
-Beams for full stave
+Beams for full stave, i.e. not just horizontal.
+Adjust stem length for beamed notes! Argh!
 
 Key sig
 
-Add text (E.g. "Allegro <note>=120" at top; "<i>cresc.</i>" under stave)
+Add accidentals automatically to notes with pitches not in the 
+ key sig. But we must also allow overriding, and double sharp/flat.
+
+
+***Add text (E.g. "Allegro <note>=120" at top; "<i>cresc.</i>" under stave)
 
 Symbols like f, mf, ff etc 
 
+Hairpins: these should be special glyphs. Can use < and > ?
+
 Staccato, accent, pause
+Use <> for these, then apply to all subsequent notes
+E.g. <stac> 60 61 62 </stac>
 
 Preprocess:
 Automatically add beam codes, using rules for groups.
@@ -24,7 +35,7 @@ Postprocess output vec to remove redundant TIME directives: where there
  are two consecutive TIMEs, remove the first.
 
 
-Extend to full stave, adding pitch
+***Extend to full stave, adding pitch
 
 Then 2-stave lines (piano), and 4-staves for SATB
 
